--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 body {
     
-     background: url('https://i.redd.it/p26dj110djo41.jpg');
+     background: url('https://i.imgur.com/IKpKiZB.png');
     background-repeat: no-repeat;
     background-size: auto;
   }
