--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 body {
     
-     background: url('https://i.imgur.com/IKpKiZB.png');
+     background-image: url('jojo.gif');
    
     background-size: auto;
 
